# exercises

./: CMakeLists.txt
algorithm/: CMakeLists.txt  binary_search.cpp  equal_range.cpp  heap.cpp  max_min.cpp  modifying_operation.cpp  non_modifying_operation.cpp  numeric.cpp  readme.md  sort.cpp  upper_bound.cpp
cast/: CMakeLists.txt  cast_example.cpp  main.cpp
class/: CMakeLists.txt  con_decon_order.cpp  enum.cpp  forward_declaration.cpp  friend_class.cpp  move_noexcept.cpp  no_copy.cpp  operator.cpp  point.cpp  publicprivateprotocted.cpp  struct.cpp  this.cpp  virtual.cpp
cmath/: CMakeLists.txt  exp_log.cpp  round.cpp  tri.cpp
codecvt/: CMakeLists.txt  codecvt.cpp  wstring_convert.cpp
compiler/: CMakeLists.txt  RVO.cpp  const_auto_&.cpp  macro_redefined.cpp  no_return.cpp  question_1.cpp  return.cpp
container/: CMakeLists.txt  allocator.cpp  array.cpp  bitset.cpp  byte.cpp  compare.cpp  deque.cpp  forward_list.cpp  hash.cpp  initializer_list.cpp  iterator.cpp  list.cpp  map.cpp  pair.cpp  priority_queue.cpp  queue.cpp  set.cpp  tuple.cpp  unordered_map.cpp  unordered_set.cpp  vector.cpp
data_structure/: CMakeLists.txt  binary_search.cpp  binary_search_tree.cpp  hash_tabel.cpp  list_tabel.cpp
exception/: CMakeLists.txt  main.cpp  nan.cpp
file/: CMakeLists.txt  file_example.cpp
function/: CMakeLists.txt  function.cpp  lambda.cpp
io/: CMakeLists.txt  buffer.cpp  filebuf.cpp  ifstream.cpp  iomanip.cpp  ios.cpp  locale.cpp  ofstream.cpp  stringbuf.cpp  stringstream.cpp  test.txt  test2.txt  test4.txt
keywords/: CMakeLists.txt  constexpr.cpp  mutabel.cpp  thread_local.cpp
keywords/inline/: CMakeLists.txt  inline.cpp  inline.hpp  inline1.cpp  inline1.hpp  inline2.cpp  inline2.hpp
keywords/static/: readme.md
limits/: CMakeLists.txt  main.cpp
linux/: CMakeLists.txt  linux_file.cpp  linux_str.cpp
linux/input/: test.txt
memory/: CMakeLists.txt  shared_ptr.cpp  unique_ptr.cpp  weak_ptr.cpp
multhread/: CMakeLists.txt  atomic_example.cpp  condition_varible.cpp  future.cpp  memory_order.cpp  mutex.cpp  pod_type.cpp  pthread_example.cpp  readme.md  semaphore.cpp  thread_example.cpp
regex/: CMakeLists.txt  regex_example.cpp
signal/: CMakeLists.txt  signal.cpp
string/: CMakeLists.txt  char_traits.cpp  string.cpp  string_view.cpp
syntactic_sugar/: CMakeLists.txt  README.md  any.cpp  filesystem.cpp  optional.cpp  other.cpp  string_view.cpp  variant.cpp
technology_stack/: CMakeLists.txt  frequency.hpp
technology_stack/binary_search/: CMakeLists.txt  binary_search.cpp
technology_stack/design_patterns/: CMakeLists.txt
technology_stack/design_patterns/builder/: CMakeLists.txt  README.md  builder.cpp
technology_stack/design_patterns/iterator/: CMakeLists.txt  dp_iterator.cpp
technology_stack/design_patterns/pimpl/: CMakeLists.txt  README.md  person.cpp  person.hpp  person_impl.cpp  person_impl.hpp  pimpl.cpp
technology_stack/design_patterns/state/: CMakeLists.txt  readme.md  state.cpp
technology_stack/design_patterns/strategy/: CMakeLists.txt  strategy.cpp
technology_stack/design_patterns/wrapper/: CMakeLists.txt  wrapper.cpp
technology_stack/dynamic_programming/: CMakeLists.txt  palindromic.cpp  readme.md  staircase.cpp
technology_stack/iou_nms/: CMakeLists.txt  iou.cpp  nms.cpp  readme.md
technology_stack/message_deque/: readme.md  version_1.hpp
technology_stack/multi_stage_pipeline/: CMakeLists.txt  multi_stage_pipeline.cpp
technology_stack/object_pool/: object_pool.cpp  object_pool.hpp
technology_stack/sliding_window/: CMakeLists.txt  readme.md  sliding_window.cpp
technology_stack/sort/: CMakeLists.txt  my_sort.cpp  readme.md  recursion.cpp  sort.cpp
technology_stack/test/: CMakeLists.txt  lwrb_test.cpp  object_pool_test.cpp  rate_test.cpp  thread_pool_version_2.cpp
technology_stack/thread_pool/: version_1.hpp  version_2.hpp
technology_stack/utility/: fixed_point.cpp  horner_polynomial.cpp  rate.hpp
template/: CMakeLists.txt  template.cpp  template_class.cpp  template_derive.cpp  template_fun.cpp  template_fun.hpp  template_fun2.cpp  template_variable.cpp
time/: CMakeLists.txt  chrono.cpp  linux_time_example.cpp  main.cpp
type_traits/: CMakeLists.txt  pod_type.cpp  type_traits.cpp
utility/: CMakeLists.txt  forword_as_tuple.cpp  piecewise_construct.cpp
var_args/: CMakeLists.txt  main.cpp
