cmake_minimum_required(VERSION 3.14)
project(algorithm)

add_executable(algorithm_binary_search binary_search.cpp)
add_executable(algorithm_sort sort.cpp)

add_executable(algorithm_non_modifying_operation non_modifying_operation.cpp)
add_executable(algorithm_modifying_operation modifying_operation.cpp)
add_executable(algorithm_heap heap.cpp)
add_executable(algorithm_max_min max_min.cpp)