cmake_minimum_required(VERSION 3.14)
project(class_example)

add_executable(operator operator.cpp)
add_executable(virtual_exe virtual.cpp)
add_executable(this_exe this.cpp)
add_executable(point point.cpp)
add_executable(friend_class friend_class.cpp)
add_executable(class_struct struct.cpp)
add_executable(enum enum.cpp)