cmake_minimum_required(VERSION 3.14)
project(container)

add_executable(vector vector.cpp)
add_executable(set set.cpp)
add_executable(compare compare.cpp)
add_executable(iterator iterator.cpp)
add_executable(allocator allocator.cpp)
add_executable(initializer_list initializer_list.cpp)
add_executable(deque deque.cpp)
add_executable(array array.cpp)
add_executable(map map.cpp)
add_executable(pair pair.cpp)
add_executable(tuple tuple.cpp)
add_executable(unordered_set unordered_set.cpp)
add_executable(hash hash.cpp)
add_executable(list list.cpp)
add_executable(forward_list forward_list.cpp)
add_executable(unordered_map unordered_map.cpp)
add_executable(bitset bitset.cpp)
add_executable(byte byte.cpp)
target_compile_options(byte PRIVATE -std=c++17)